# chat_app

client/: Cargo.toml
client/src/: gui.rs  main.rs
protocol/: Cargo.toml
protocol/proto/: rpc.proto
protocol/src/: lib.rs
rstreamer/: Cargo.toml
rstreamer/src/: lib.rs  main.rs
server/: Cargo.toml
server/src/: main.rs  protocol.rs
