[package]
name = "chat_app_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-ringbuf = "0.1.2"
audiopus = { version = "0.2.0", features = ["default_features"] }
console-subscriber = "0.1.8"
once_cell = "1.17.1"
protocol = { version = "0.1.0", path = "../protocol" }
rstreamer = { version = "0.1.0", path = "../rstreamer" }
time = { version = "0.3.20", features = ["local-offset", "formatting"] }
tokio = { version = "1.26.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.12", features = ["sync"] }
tonic = "0.8.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["time"] }
